--- a/plano.html
+++ b/plano.html
@@ -65,16 +65,14 @@
                 <a class="nav-link" href="missoes.html">Missões</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="plano.html">Plano de Carreira</a>
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="config.html">Configurações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historico.html">Histórico</a>
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
@@ -138,9 +136,9 @@
       </div>
     </nav>
 
-    <section id="plano" class="py-5">
+  <section id="trilha" class="py-5">
       <div class="container">
-        <h2 class="h4">Plano de Carreira</h2>
+  <h2 class="h4">Trilha de Aprendizagem</h2>
         <div class="row g-3">
           <div class="col-12 col-lg-8">
             <div class="card h-100">
@@ -164,11 +162,11 @@
                   <div class="col-12 col-md-6">
                     <div class="p-3 border rounded-4 h-100">
                       <div class="fw-semibold mb-1">
-                        <i class="bi bi-basket text-brand me-1"></i> Cortes &
-                        Preparos
+                        <i class="bi bi-graph-up text-brand me-1"></i> Técnicas
+                        de Venda
                       </div>
                       <div class="small text-muted">
-                        Vídeo • 18 min • 120 pts
+                        Vídeo • 15 min • 100 pts
                       </div>
                       <button class="btn btn-sm btn-outline-secondary mt-2">
                         Assistir
@@ -192,11 +190,11 @@
                   <div class="col-12 col-md-6">
                     <div class="p-3 border rounded-4 h-100">
                       <div class="fw-semibold mb-1">
-                        <i class="bi bi-graph-up text-brand me-1"></i> Técnicas
-                        de Venda
+                        <i class="bi bi-basket text-brand me-1"></i> Cortes &
+                        Preparos
                       </div>
                       <div class="small text-muted">
-                        Vídeo • 15 min • 100 pts
+                        Vídeo • 18 min • 120 pts
                       </div>
                       <button class="btn btn-sm btn-outline-secondary mt-2">
                         Assistir
@@ -216,18 +214,32 @@
             <div class="card h-100">
               <div class="card-header">Conquistas</div>
               <div class="card-body d-flex flex-wrap gap-2">
-                <span class="badge bg-light text-dark p-2"
-                  ><i class="bi bi-stars me-1"></i> Atendente 5⭐</span
-                >
-                <span class="badge bg-light text-dark p-2"
-                  ><i class="bi bi-bag-check me-1"></i> Combo Master</span
-                >
-                <span class="badge bg-light text-dark p-2"
-                  ><i class="bi bi-emoji-smile me-1"></i> NPS Expert</span
-                >
-                <span class="badge bg-light text-dark p-2"
-                  ><i class="bi bi-rocket-takeoff me-1"></i> Growth Seller</span
-                >
+                <div class="d-flex flex-wrap justify-content-center w-100 gap-4">
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-stars text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">Atendente 5⭐</span>
+                  </div>
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-bag-check text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">Combo Master</span>
+                  </div>
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-emoji-smile text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">NPS Expert</span>
+                  </div>
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-rocket-takeoff text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">Growth Seller</span>
+                  </div>
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-award text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">Destaque do Mês</span>
+                  </div>
+                  <div class="d-flex flex-column align-items-center">
+                    <i class="bi bi-lightning-charge text-brand mb-2" style="font-size: 2.5rem;"></i>
+                    <span class="fw-semibold">Meta Relâmpago</span>
+                  </div>
+                </div>
               </div>
               <div class="card-footer bg-transparent text-end">
                 <a
@@ -242,9 +254,7 @@
       </div>
     </section>
     <footer class="py-4 mt-4">
-      <div
-        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
-      >
+      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
