--- a/ranking.html
+++ b/ranking.html
@@ -65,16 +65,14 @@
                 <a class="nav-link" href="missoes.html">Missões</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="plano.html">Plano de Carreira</a>
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="config.html">Configurações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historico.html">Histórico</a>
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
@@ -166,7 +164,7 @@
             <div class="card h-100">
               <div class="card-header">Local (Loja)</div>
               <div class="table-responsive">
-                <table class="table align-middle mb-0">
+                <table class="table align-middle mb-0 table-ranking">
                   <thead>
                     <tr>
                       <th>#</th>
@@ -176,28 +174,16 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Lucas</td>
-                      <td>1.280</td>
-                      <td>
-                        <span class="badge bg-warning text-dark">Ouro</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Evelyn</td>
-                      <td>1.110</td>
-                      <td>
-                        <span class="badge bg-warning text-dark">Ouro</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Davi</td>
-                      <td>980</td>
-                      <td><span class="badge bg-secondary">Prata</span></td>
-                    </tr>
+                    <tr><td>1</td><td>Lucas</td><td>1.280</td><td><span class="badge bg-warning text-dark">Ouro</span></td></tr>
+                    <tr><td>2</td><td>Evelyn</td><td>1.110</td><td><span class="badge bg-warning text-dark">Ouro</span></td></tr>
+                    <tr><td>3</td><td>Davi</td><td>980</td><td><span class="badge bg-secondary">Prata</span></td></tr>
+                    <tr><td>4</td><td>João</td><td>950</td><td><span class="badge bg-secondary">Prata</span></td></tr>
+                    <tr><td>5</td><td>Marina</td><td>900</td><td><span class="badge bg-info">Bronze</span></td></tr>
+                    <tr><td>6</td><td>Rafael</td><td>870</td><td><span class="badge bg-info">Bronze</span></td></tr>
+                    <tr><td>7</td><td>Patrícia</td><td>850</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
+                    <tr><td>8</td><td>André</td><td>820</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
+                    <tr><td>9</td><td>Camila</td><td>800</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
+                    <tr><td>10</td><td>Thiago</td><td>780</td><td><span class="badge bg-light text-dark">Participante</span></td></tr>
                   </tbody>
                 </table>
               </div>
@@ -205,9 +191,9 @@
           </div>
           <div class="col-12 col-lg-6">
             <div class="card h-100">
-              <div class="card-header">Geral (Nacional)</div>
+              <div class="card-header">Geral (Regional)</div>
               <div class="table-responsive">
-                <table class="table align-middle mb-0">
+                <table class="table align-middle mb-0 table-ranking">
                   <thead>
                     <tr>
                       <th>#</th>
@@ -217,24 +203,16 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Fagner</td>
-                      <td>2.250</td>
-                      <td><span class="badge bg-dark">Lenda Swift</span></td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Lucas</td>
-                      <td>2.020</td>
-                      <td><span class="badge bg-dark">Lenda Swift</span></td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Evelyn</td>
-                      <td>1.720</td>
-                      <td><span class="badge bg-secondary">Mestre</span></td>
-                    </tr>
+                    <tr><td>1</td><td>Fagner</td><td>2.250</td><td><span class="badge bg-dark">Lenda Swift</span></td></tr>
+                    <tr><td>2</td><td>Lucas</td><td>2.020</td><td><span class="badge bg-dark">Lenda Swift</span></td></tr>
+                    <tr><td>3</td><td>Evelyn</td><td>1.720</td><td><span class="badge bg-secondary">Mestre</span></td></tr>
+                    <tr><td>4</td><td>João</td><td>1.500</td><td><span class="badge bg-secondary">Mestre</span></td></tr>
+                    <tr><td>5</td><td>Marina</td><td>1.320</td><td><span class="badge bg-warning">Ouro</span></td></tr>
+                    <tr><td>6</td><td>Rafael</td><td>1.200</td><td><span class="badge bg-warning">Ouro</span></td></tr>
+                    <tr><td>7</td><td>Patrícia</td><td>1.050</td><td><span class="badge bg-info">Prata</span></td></tr>
+                    <tr><td>8</td><td>André</td><td>980</td><td><span class="badge bg-info">Prata</span></td></tr>
+                    <tr><td>9</td><td>Camila</td><td>900</td><td><span class="badge bg-light text-dark">Bronze</span></td></tr>
+                    <tr><td>10</td><td>Thiago</td><td>850</td><td><span class="badge bg-light text-dark">Bronze</span></td></tr>
                   </tbody>
                 </table>
               </div>
@@ -244,9 +222,7 @@
       </div>
     </section>
     <footer class="py-4 mt-4">
-      <div
-        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
-      >
+      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
