--- a/gerente.html
+++ b/gerente.html
@@ -12,14 +12,35 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <script defer src="https://unpkg.com/lucide@latest"></script>
+  <script defer src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- Sistema de Autenticação -->
-    <script src="assets/js/auth.js"></script>
+  <script src="assets/js/auth.js"></script>
     <script>
       // Proteger página - apenas gerentes podem acessar
       window.checkPageAccess("gerente");
+      // Oculta links de navegação para gerente
+      document.addEventListener('DOMContentLoaded', function() {
+        try {
+          var user = null;
+          if (window.SwiftAuth && window.SwiftAuth.getCurrentUser) {
+            user = window.SwiftAuth.getCurrentUser();
+          } else {
+            var userData = sessionStorage.getItem('swift_user') || localStorage.getItem('swift_user');
+            if (userData) user = JSON.parse(userData);
+          }
+          if (user && user.role === 'gerente') {
+            var navLinks = document.querySelectorAll('a.nav-link');
+            navLinks.forEach(function(link) {
+              var txt = link.textContent.trim();
+              if (txt === 'Ranking' || txt === 'Missões' || txt === 'Trilha de Aprendizagem') {
+                link.style.display = 'none';
+              }
+            });
+          }
+        } catch(e) { console.warn('Erro ao ocultar navegação para gerente:', e); }
+      });
     </script>
   </head>
   <body>
@@ -65,16 +86,14 @@
                 <a class="nav-link" href="missoes.html">Missões</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="plano.html">Plano de Carreira</a>
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="config.html">Configurações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historico.html">Histórico</a>
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
@@ -117,11 +136,6 @@
                   <li>
                     <a class="dropdown-item" href="historico.html"
                       ><i class="bi bi-clock-history me-2"></i>Histórico</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="index.html"
-                      ><i class="bi bi-house me-2"></i>Dashboard</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
@@ -176,9 +190,9 @@
                       <td>Lucas</td>
                       <td>1.280</td>
                       <td>
-                        <button class="btn btn-sm btn-outline-secondary">
+                        <a href="index.html?colaborador=lucas" class="btn btn-sm btn-outline-secondary">
                           Ver perfil
-                        </button>
+                        </a>
                       </td>
                     </tr>
                     <tr>
@@ -396,9 +410,7 @@
     </div>
 
     <footer class="py-4 mt-4">
-      <div
-        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
-      >
+      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
