--- a/login.html
+++ b/login.html
@@ -165,29 +165,16 @@
                 </div>
               </section>
 
-              <footer
-                class="p-4 d-flex flex-column align-items-center text-center"
-              >
-                <div class="d-flex justify-content-center gap-3 mb-3">
-                  <div class="icon-circle">
-                    <i data-lucide="award" class="text-warning"></i>
+              <footer class="py-4 mt-4">
+                <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
+                  <div class="text-muted small">
+                    © 2025 SwiftPro. Todos os direitos reservados.
                   </div>
-                  <div class="icon-circle">
-                    <i data-lucide="database" class="text-warning"></i>
+                  <div class="d-flex align-items-center gap-3">
+                    <a class="small text-decoration-none" href="#">Termos</a>
+                    <a class="small text-decoration-none" href="#">Privacidade</a>
+                    <a class="small text-decoration-none" href="#">Ajuda</a>
                   </div>
-                  <div class="icon-circle">
-                    <i data-lucide="bar-chart-3" class="text-warning"></i>
-                  </div>
-                </div>
-                <a href="#" class="text-warning text-decoration-none fw-bold"
-                  >Acessar Site Swift</a
-                >
-                <div class="mt-3">
-                  <small class="text-muted">
-                    Protegido por reCAPTCHA.
-                    <a href="#" class="text-warning">Privacidade</a> e
-                    <a href="#" class="text-warning">Termos de uso</a>
-                  </small>
                 </div>
               </footer>
             </div>
@@ -220,6 +207,29 @@
     <script src="assets/js/login.js"></script>
     <script>
       lucide.createIcons();
+      // Oculta links de navegação para gerente logado
+      document.addEventListener('DOMContentLoaded', function() {
+        try {
+          var user = null;
+          if (window.SwiftAuth && window.SwiftAuth.getCurrentUser) {
+            user = window.SwiftAuth.getCurrentUser();
+          } else {
+            // fallback
+            var userData = sessionStorage.getItem('swift_user') || localStorage.getItem('swift_user');
+            if (userData) user = JSON.parse(userData);
+          }
+          if (user && user.role === 'gerente') {
+            // Esconde links de navegação se existirem
+            var navLinks = document.querySelectorAll('a.nav-link');
+            navLinks.forEach(function(link) {
+              var txt = link.textContent.trim();
+              if (txt === 'Ranking' || txt === 'Missões' || txt === 'Trilha de Aprendizagem') {
+                link.style.display = 'none';
+              }
+            });
+          }
+        } catch(e) { console.warn('Erro ao ocultar navegação para gerente:', e); }
+      });
     </script>
   </body>
 </html>
